priconeer-binaryのリポジトリ追加

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# キャラとアイテムの画像はリポジトリに上げられない
-/public/images/characters
-/public/images/items
+# 画像は別リポジトリ
+/public/images
 
 # シード情報も直接載せない
 /masterdata
